--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.13.2",
     "axios": "^1.6.5",
+    "prisma": "^5.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
