--- a/api/package.json
+++ b/api/package.json
@@ -25,7 +25,8 @@
 		"@nestjs/common": "^10.0.0",
 		"@nestjs/config": "^3.1.1",
 		"@nestjs/core": "^10.0.0",
-		"@nestjs/jwt": "^10.2.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "*",
 		"@nestjs/passport": "^10.0.3",
 		"@nestjs/platform-express": "^10.0.0",
 		"@prisma/client": "^5.8.1",
